# wellington_cycle_counts

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.rst  pyproject.toml  scraping.py
data/processed/: counters.csv  counters.geojson  counts_201501.csv  counts_201502.csv  counts_201503.csv  counts_201504.csv  counts_201505.csv  counts_201506.csv  counts_201507.csv  counts_201508.csv  counts_201509.csv  counts_201510.csv  counts_201511.csv  counts_201512.csv  counts_201601.csv  counts_201602.csv  counts_201603.csv  counts_201604.csv  counts_201605.csv  counts_201606.csv  counts_201607.csv  counts_201608.csv  counts_201609.csv  counts_201610.csv  counts_201611.csv  counts_201612.csv  counts_201701.csv  counts_201702.csv  counts_201703.csv  counts_201704.csv  counts_201705.csv  counts_201706.csv  counts_201707.csv  counts_201708.csv  counts_201709.csv  counts_201710.csv  counts_201711.csv  counts_201712--202505.csv  counts_201712.csv  counts_201801.csv  (+88 more)
notebooks/: scraping.py
